# STM32_MicroC_OS

./: .gitignore  .gitmodules  Makefile  README.md
Project_1/infra/STM32_system/Source/: stm32h7xx_it.c
Project_1/linker/: STM32H743ZITx_FLASH.ld
Project_1/src/: main.c
STM32H743ZI_Nucleo/: CMakeLists.txt  CMakePresets.json  Makefile  Makefile - Copy  ReadMe.txt  toolchain.cmake
STM32H743ZI_Nucleo/Micrium/Software/uCOS-II/Ports/ARM-Cortex-M/ARMv7-M/GNU/: os_cpu.h  os_cpu_a.S  os_cpu_c.c  os_dbg.c
STM32H743ZI_Nucleo/Micrium/Software/uCOS-III/Ports/ARM-Cortex-M/ARMv7-M/GNU/: os_cpu_c.c
STM32H743ZI_Nucleo/Micrium/Software/uCOS-III/Ports/ARM-Cortex-M/ARMv7-M/IAR/: os_cpu.h  os_cpu_a.asm  os_cpu_c.c
STM32H743ZI_Nucleo/ST/BSP/Interrupts/: bsp_int_armv7m.c
STM32H743ZI_Nucleo/ST/BSP/SDK/STM32CubeH7/Drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h743xx.h
STM32H743ZI_Nucleo/ST/BSP/STM32H743ZI_Nucleo/: bsp_clk.c  bsp_cpu.c  bsp_int.h  bsp_led.c  bsp_led.h  bsp_os.c  stm32h7xx_hal_conf.h
STM32H743ZI_Nucleo/ST/BSP/Startup/STM32H7xx/GCC/: startup_stm32h743xx.s  stm32h7_flash.ld
STM32H743ZI_Nucleo/ST/BSP/Startup/STM32H7xx/IAR/: startup_stm32h743xx.s
STM32H743ZI_Nucleo/ST/STM32H743ZI_Nucleo/Blinky/: app_cfg.h
STM32H743ZI_Nucleo/ST/STM32H743ZI_Nucleo/Blinky/OS2/: main.c
STM32H743ZI_Nucleo/ST/STM32H743ZI_Nucleo/Blinky/OS2/IAR/: Blinky.dep  Blinky.ewd  Blinky.ewp
STM32H743ZI_Nucleo/ST/STM32H743ZI_Nucleo/Blinky/OS2/TrueSTUDIO/: .cproject  .project
STM32H743ZI_Nucleo/ST/STM32H743ZI_Nucleo/Blinky/OS3/: main.c  os_cfg_app.h
STM32H743ZI_Nucleo/ST/STM32H743ZI_Nucleo/Blinky/OS3/IAR/: Blinky.dep  Blinky.ewp  Blinky.eww
STM32H743ZI_Nucleo/ST/STM32H743ZI_Nucleo/Blinky/OS3/TrueSTUDIO/: .cproject  .project
infra/STM32_system/Include/: stm32h7xx_it.h
src/: main.c
